data/derived/fa15/progs/unify/prog2630.ml.out
Characters 138-144:
  if (x' > 9) then (i + 1 + itt x')
                            ^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
